--- a/templates/acapy-secret.yaml
+++ b/templates/acapy-secret.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 stringData:
   {{- if .Values.acapy.admin.apiKey -}}
-  ACAPY_ADMIN_URL_API_KEY: {{ required "acapy.admin.adminURLApiKey is required" .Values.acapy.admin.apiKey.adminURLApiKey | quote }}
+  ACAPY_ADMIN_URL_API_KEY: {{ .Values.acapy.admin.apiKey.adminURLApiKey | quote }}
   {{- end -}}
   ACAPY_AGENT_SEED: {{ required "acapy.agentSeed is required" .Values.acapy.agentSeed | quote }}
   ACAPY_WALLET_KEY: {{ required "acapy.walletKey is required" .Values.acapy.walletKey | quote }}
