--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "acapy-chart.fullname" . }}-test-connection"
+  name: "{{ include "acapy.fullname" . }}-test-connection"
   labels:
-    {{- include "acapy-chart.labels" . | nindent 4 }}
+    {{- include "acapy.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "acapy-chart.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "acapy.fullname" . }}:{{ .Values.acapy.service.httpPort }}']
   restartPolicy: Never
