--- a/templates/acapy-secret.yaml
+++ b/templates/acapy-secret.yaml
@@ -7,9 +7,9 @@ metadata:
     {{- include "acapy.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
 stringData:
-  {{- if .Values.acapy.admin.apiKey -}}
+  {{- if .Values.acapy.admin.apiKey.enabled }}
   ACAPY_ADMIN_URL_API_KEY: {{ .Values.acapy.admin.apiKey.adminURLApiKey | quote }}
-  {{- end -}}
+  {{- end }}
   ACAPY_AGENT_SEED: {{ required "acapy.agentSeed is required" .Values.acapy.agentSeed | quote }}
   ACAPY_WALLET_KEY: {{ required "acapy.walletKey is required" .Values.acapy.walletKey | quote }}
 type: Opaque
